Fixed folder spacing

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     --spacing-medium: 20px;
     --spacing-large: 50px;
     --spacing-nested: 40px;
+    --spacing-folders: 5px;
     --border-radius: 10px;
     --sidebar-width: 340px;
 }
@@ -119,7 +120,7 @@ body {
 
 .folder {
     cursor: pointer;
-    padding: var(--spacing-small);
+    padding: var(--spacing-folders);
     display: block;
     position: relative;
     border-radius: var(--border-radius);
